[package]
name = "async_chat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["sync"] }
rustls-pemfile = "2"
anyhow = "1"
futures-util = { version = "0.3", features = ["sink"] }